[gd_scene load_steps=2 format=3 uid="uid://bsovr71fh25aq"]

[ext_resource type="Script" path="res://main.gd" id="1_yb7ts"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yb7ts")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(320, 320)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 3

[node name="coords" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 325.0
offset_right = 310.0
offset_bottom = 348.0

[node name="charID" type="Label" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 5.0
offset_right = 633.0
offset_bottom = 28.0

[node name="preButton" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 44.0
offset_right = 405.0
offset_bottom = 75.0
text = "Previous"

[node name="nextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 44.0
offset_right = 485.0
offset_bottom = 75.0
text = "Next"

[node name="saveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 407.0
offset_right = 625.0
offset_bottom = 438.0
text = "Save"

[node name="loadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 407.0
offset_right = 543.0
offset_bottom = 438.0
text = "Load"

[node name="loadInternalButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 407.0
offset_right = 140.0
offset_bottom = 438.0
tooltip_text = "Load the default database."
text = "Load Internal"

[node name="fileResult" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 442.0
offset_right = 625.0
offset_bottom = 465.0

[node name="clearButton" type="Button" parent="."]
layout_mode = 0
offset_left = 558.0
offset_top = 45.0
offset_right = 633.0
offset_bottom = 76.0
text = "Clear"

[node name="plus10" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 80.0
offset_right = 485.0
offset_bottom = 111.0
text = "+ 10
"

[node name="minus10" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 80.0
offset_right = 405.0
offset_bottom = 111.0
text = "-10
"

[node name="FileOpenDialog" type="FileDialog" parent="."]

[node name="FileSaveDialog" type="FileDialog" parent="."]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="preButton" to="." method="_on_pre_button_pressed"]
[connection signal="pressed" from="nextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="loadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="loadInternalButton" to="." method="_on_load_internal_button_pressed"]
[connection signal="pressed" from="clearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="plus10" to="." method="_on_plus_10_pressed"]
[connection signal="pressed" from="minus10" to="." method="_on_minus_10_pressed"]
[connection signal="file_selected" from="FileOpenDialog" to="." method="_on_file_open_dialog_file_selected"]
[connection signal="file_selected" from="FileSaveDialog" to="." method="_on_file_save_dialog_file_selected"]
